# git-commit-or-tag

./: pyproject.toml
src/git_commit_or_tag/: __init__.py
